--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,11 @@
-# build env
-FROM node:21.7.1-alpine
+FROM node:13.12.0-alpine as build
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm cache clean --force
+RUN npm install --legacy-peer-deps
 COPY . ./
+RUN npm install --legacy-peer-deps
+RUN npm install react-meta-tags --legacy-peer-deps
 RUN npm run build
-CMD cp -r build result_build
+RUN npm install -g http-server
+CMD ["http-server", "-p", "8008", "./build"]
