--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,22 @@
 [flake8]
 ignore =
-    W503
+    W503,
+    F811
 exclude =
     tests/,
     */migrations/,
     venv/,
-    env/
+    env/,
+    */venv/,
+    */env/,
 per-file-ignores =
     */settings.py:E501,
     */api/views.py: A002,
     */api/services.py: Q003,
     */manage.py: Q000
 max-complexity = 10 
+
+[isort]
+src_paths=backend/
+multi_line_output = 3
+line_length = 79
