--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,12 @@
 name: Main foodgram workflow
 
-on: push
+on:
+  push:
+    branches:
+      - master
 
 jobs:
-  test_flake8:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.9
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip 
-        pip install -r ./backend/requirements.txt 
-    - name: Test with flake8
-      run: |
-        python -m flake8 backend/
-
-  test_pytest:
+  tests:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -41,8 +28,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
+        pip install flake8==6.0.0
         pip install -r ./backend/requirements.txt 
-    - name: Test with django tests
+    - name: Test with flake8
       env:
         POSTGRES_USER: django_user
         POSTGRES_PASSWORD: django_password
@@ -50,15 +38,13 @@ jobs:
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
       run: |
+        python -m flake8 backend/
         cd backend/
-        python manage.py test
 
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
-    needs:
-      - test_flake8
-      - test_pytest
+    needs: tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -67,37 +53,18 @@ jobs:
       - name: Login to Docker 
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub backend
         uses: docker/build-push-action@v4
         with:
           context: ./backend/
           push: true
-          tags: ${{ secrets.USERNAME }}/foodgram_back:latest 
-  frontend_tests:
-    runs-on: ubuntu-latest
+          tags: goldenlion52rus/foodgram_back:latest
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up nodeJS
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-
-    - name: Install dependencies
-      run: |
-        cd frontend/
-        npm ci --legacy-peer-deps
-
-    - name: Test frontend
-      run: |
-        cd frontend/
-        npm run test
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
-    needs: frontend_tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -108,12 +75,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
+      - name: Push to DockerHub frontend
         uses: docker/build-push-action@v4
         with:
           context: ./frontend/
           push: true
-          tags: ${{ secrets.USERNAME }}/foodgram_front:latest 
+          tags: goldenlion52rus/foodgram_front:latest
+
   build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
@@ -127,12 +95,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
+      - name: Push to DockerHub gateway
         uses: docker/build-push-action@v4
         with:
           context: ./nginx/
           push: true
-          tags: ${{ secrets.USERNAME }}/foodgram_gateway:latest
+          tags: goldenlion52rus/foodgram_gateway:latest
+
   deploy:
     runs-on: ubuntu-latest
     needs: 
@@ -160,17 +129,14 @@ jobs:
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
           cd foodgram
+          # Выполняет pull образов с Docker Hub
           sudo docker compose -f docker-compose.production.yml pull
+          # Перезапускает все контейнеры в Docker Compose
           sudo docker compose -f docker-compose.production.yml down
           sudo docker compose -f docker-compose.production.yml up -d
-          sudo docker system prune -af
-  send_message:
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-    - name: Send message
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен!
+          # Выполняет миграции и сбор статики
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py makemigrations
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py load_ingredients
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
