--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 volumes:
   pg_data:
   static:
+  media:
 
 services:
   db:
@@ -13,6 +14,9 @@ services:
     env_file: .env
     volumes:
       - static:/backend_static
+      - media:/app/media
+    depends_on:
+      - db
 
   frontend:
     env_file: .env
@@ -26,5 +30,6 @@ services:
     env_file: .env
     volumes:
       - static:/staticfiles
+      - media:/var/html/media/
     ports:
       - 8008:80
