--- a/.env.template
+++ b/.env.template
@@ -6,5 +6,5 @@ DB_ENGINE=django.db.backends.postgresql
 DB_NAME=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-DB_HOST=foodgram-db # Имя контейнера с БД в docker-compose.yml
+DB_HOST=foodgram-db
 DB_PORT=5432
